--- a/src/components/sections/sectionGroup/sectionGroup.module.css
+++ b/src/components/sections/sectionGroup/sectionGroup.module.css
@@ -2,4 +2,5 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  gap: 7.5rem;
 }
